--- a/event-app/src/index.css
+++ b/event-app/src/index.css
@@ -9,3 +9,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+/* For WebKit-based browsers (Chrome, Safari, Opera) */
+::-webkit-scrollbar {
+  width: 8px; /* Width of the scroll bar */
+  height: 8px; /* Height of the scroll bar */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #212529; /* Color of the track (area behind the scroll thumb) */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #212529; /* Color of the scroll thumb */
+  border-radius: 4px; /* Rounded corners of the scroll thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #212529; /* Color of the scroll thumb on hover */
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin; /* Sets the width of the scroll bar */
+  scrollbar-color: #888 #212529; /* Color of the scroll thumb and track */
+}
